<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager" />

    <TextView
        android:id="@+id/TVEmptyText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_items_to_display"
        android:textSize="24sp"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/BTPaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:tint="#ffffff"
        android:src="@drawable/icon_paste"
        android:layout_margin="16dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/LLSelectionOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="16dp"
        android:visibility="gone">

        <Button
            android:id="@+id/BTCancelSelection"
            style="@style/ButtonNeutral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/BTRemoveSelected"
            style="@style/ButtonNeutral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:text="@string/remove" />
    </LinearLayout>
</FrameLayout>
