<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    android:layout_marginTop="4dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/item_select"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:layout_margin="2dp"
            android:background="@drawable/file_grid_item_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="6dp">


            <ImageView
                android:id="@+id/ImageView"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/game_icon" />

            <TextView
                android:id="@+id/TVTitle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:gravity="center"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TVSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?attr/colorSecondaryText" />
        </LinearLayout>

        <ImageView
            android:id="@+id/BTRun"
            style="@style/RunButton"
            android:paddingTop="5dp"
            android:src="@drawable/icon_run_white"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/run_button" />

        <ImageView
            android:id="@+id/BTMenu"
            style="@style/RunButton"
            android:gravity="start|top"
            android:paddingTop="5dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/icon_list_item_menu_white"
            android:contentDescription="@string/menu_button" />
    </RelativeLayout>
